[gd_scene load_steps=17 format=3 uid="uid://usdfp6fqxnev"]

[ext_resource type="Script" path="res://example/mizunotable.gd" id="1_dl1vx"]
[ext_resource type="Script" path="res://addons/card_3d/scripts/drag_controller.gd" id="2_vd44s"]
[ext_resource type="PackedScene" uid="uid://d1uvcisduvvj" path="res://addons/card_3d/scenes/card_collection_3d.tscn" id="3_38q4v"]
[ext_resource type="Script" path="res://example/table_discard.gd" id="4_frae0"]
[ext_resource type="Script" path="res://addons/card_3d/scripts/card_layouts/fan_card_layout.gd" id="5_gc5vc"]
[ext_resource type="PackedScene" uid="uid://dwcaww0bky4lv" path="res://assets/MIZUNO.glb" id="6_jj2ui"]
[ext_resource type="PackedScene" uid="uid://bjx4ugu14qx3w" path="res://example/face_card_3d.tscn" id="7_50euc"]
[ext_resource type="Material" uid="uid://drikh8gb0pvmj" path="res://example/materials/card-back.tres" id="8_cxk50"]
[ext_resource type="Script" path="res://example/uno_card_3d.gd" id="8_yxpkk"]
[ext_resource type="ArrayMesh" uid="uid://bxf6kiperudcx" path="res://assets/Cards/card_blue_0.res" id="10_t8hde"]
[ext_resource type="Script" path="res://example/MizunoMenu.gd" id="11_dmlbv"]
[ext_resource type="Script" path="res://example/win_canvas.gd" id="12_21e7f"]

[sub_resource type="Resource" id="Resource_w17iw"]
script = ExtResource("5_gc5vc")

[sub_resource type="PlaneMesh" id="PlaneMesh_gv0to"]
size = Vector2(40, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glsqp"]
albedo_color = Color(0.207843, 0.396078, 0.301961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g1lkx"]
material = ExtResource("8_cxk50")
size = Vector3(2.5, 3.5, 0.2)

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.49813)
shadow_enabled = true
shadow_opacity = 0.65
shadow_blur = 5.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.3544)
current = true
fov = 84.375

[node name="Table" type="Node3D" parent="."]
script = ExtResource("1_dl1vx")

[node name="DragController" type="Node3D" parent="Table"]
script = ExtResource("2_vd44s")

[node name="TableCards" parent="Table/DragController" instance=ExtResource("3_38q4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29413, 0.486655, 0)
script = ExtResource("4_frae0")

[node name="Hand" parent="Table/DragController" instance=ExtResource("3_38q4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.21758, 24.1605, 0.5)
visible = false
card_layout_strategy = SubResource("Resource_w17iw")

[node name="Player1" parent="Table/DragController" instance=ExtResource("3_38q4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0754433, -10.3692, 0.5)
card_layout_strategy = SubResource("Resource_w17iw")

[node name="Player2" parent="Table/DragController" instance=ExtResource("3_38q4v")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -10.1461, 0.556923, 0.5)
card_layout_strategy = SubResource("Resource_w17iw")

[node name="Player3" parent="Table/DragController" instance=ExtResource("3_38q4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0613, 12.2174, 0.5)
card_layout_strategy = SubResource("Resource_w17iw")

[node name="Player4" parent="Table/DragController" instance=ExtResource("3_38q4v")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 11.2482, 1.07772, 0.5)
card_layout_strategy = SubResource("Resource_w17iw")

[node name="TableSurface" type="MeshInstance3D" parent="Table"]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, -2, 0, 2, -8.74228e-08, 0, 0, -1.29586)
mesh = SubResource("PlaneMesh_gv0to")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_glsqp")

[node name="MIZUNO" parent="Table" instance=ExtResource("6_jj2ui")]
transform = Transform3D(10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0.154611, 0.296223, -18.4303)

[node name="Deck" parent="." instance=ExtResource("7_50euc")]
transform = Transform3D(1, 8.74228e-08, -8.74228e-08, 8.74228e-08, -1, -7.64274e-15, -8.74228e-08, 0, -1, 2.20189, 0.563266, -0.686903)
script = ExtResource("8_yxpkk")
rank = 14
suit = 3
front_material_path = "res://example/Card_Back.tres"
back_material_path = "res://example/Card_Back.tres"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Deck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.111376)
visible = false
mesh = SubResource("BoxMesh_g1lkx")
surface_material_override/0 = ExtResource("8_cxk50")

[node name="CardBlue0" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.1, 4.98286e-07, -2.17808e-14, 0, -1.44248e-07, -3.3, -6.19083e-07, -3.3, 1.44248e-07, 2.13136, -3.51193, -0.362734)
mesh = ExtResource("10_t8hde")

[node name="MenuCanvas" type="CanvasLayer" parent="."]
script = ExtResource("11_dmlbv")

[node name="MenuButton" type="MenuButton" parent="MenuCanvas"]
offset_left = 1090.0
offset_top = 6.0
offset_right = 1147.0
offset_bottom = 37.0
text = "Menu"

[node name="WinCanvas" type="CanvasLayer" parent="."]
script = ExtResource("12_21e7f")

[node name="Panel" type="Panel" parent="WinCanvas"]
offset_left = 320.0
offset_top = 128.0
offset_right = 832.0
offset_bottom = 440.0

[node name="Label" type="Label" parent="WinCanvas/Panel"]
layout_mode = 0
offset_left = 128.0
offset_top = 32.0
offset_right = 384.0
offset_bottom = 91.0
text = "Player __ wins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="WinCanvas/Panel"]
layout_mode = 0
offset_left = 136.0
offset_top = 136.0
offset_right = 376.0
offset_bottom = 184.0
text = "Play Again"

[node name="ExitToLobbyButton" type="Button" parent="WinCanvas/Panel"]
layout_mode = 0
offset_left = 136.0
offset_top = 200.0
offset_right = 376.0
offset_bottom = 248.0
text = "Exit to Lobby"

[connection signal="card_added" from="Table/DragController/TableCards" to="Table" method="_on_table_cards_card_added"]
[connection signal="card_3d_mouse_up" from="Deck" to="Table" method="_on_face_card_3d_card_3d_mouse_up"]
[connection signal="button_down" from="WinCanvas/Panel/PlayAgainButton" to="WinCanvas" method="_on_play_again_button_button_down"]
[connection signal="button_down" from="WinCanvas/Panel/ExitToLobbyButton" to="WinCanvas" method="_on_exit_to_lobby_button_button_down"]
